<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
   android:background="@color/black"
    android:elevation="4dp"
    android:radius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/newlogo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/news_image" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:text="@string/news_title" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:text="@string/news_subtitle" />
    </LinearLayout>
</androidx.cardview.widget.CardView>